--- a/index.html
+++ b/index.html
@@ -198,6 +198,18 @@
           <p>我快三十岁了，三十年来第一次遇到比我小的孩子面临生命危急，医生劝家长放弃的危机。</p>
 <p>我感到难过得不能自已，为她尚未开放就快要枯萎的生命，她才十一岁，对世界懵懵懂懂，没来得及体验青春、爱情的甜蜜和忧伤，就像一个软糯的小鸡仔，将要破壳而出时遇到了强风雨的袭击，弱小的父母甚至同类都无法护她周全。</p>
 <p>L 堂嫂同意放弃，堂哥愿意试一试奇迹，奇迹啊，八年前我就抱着侥幸心理祈祷过，什么也没得到，老爸还是走了，不知道今天会怎么样。这个孩子，她能挺过去吗？她能看到明天的太阳吗？</p>
+<p>–</p>
+<p>下午五点多，家族群里的成员纷纷排队发出「🙏🙏🙏🙏🙏🙏」的消息，看着手术室外家属等待的照片，我感到深深的无力，此刻除了求神佛保佑，竟真的没有任何办法。</p>
+<p>手术室里的小姑娘，愿你平安。</p>
+<p>–</p>
+<p>五个小时了，还没出来，弟妹说她去买娃娃迎接孩子出手术室门，我发了红包，让她也代我买一个。我们都抱着手术成功的希望，不去想象另一个可能的分支故事。弟妹说之前买了个娃娃给孩子，她很开心，让把娃娃放在她床头。</p>
+<p>一个同事的 2020 感言写着：「一点也不怀念，2020年上半年本来是我享受大学最后美好时光的时刻，因为疫情原因，呆在家里哪也没有去，再次因为疫情原因，毕业证延迟发，导致入职晚几天错过了PCG的MateXS。最后快到年底的时候被蛋壳坑了1W4。」</p>
+<p>这位同事的企业微信签名是「人生不如意之事十之八九，可与人言者并无二三。」</p>
+<p>是这样的。</p>
+<p>–</p>
+<p>2020 还有二十天。</p>
+<p>我们每个人，从出生起，就被死亡的阴影笼罩上了，平凡人的每一天，看起来都是确定的，已知的，却还是有那么多的意外打击降临。</p>
+<p>你听啊，时钟滴答滴答地走，那是生命在流逝。手术室，就像薛定谔的猫住的箱子。我希望医生永远不要出来。</p>
 
         
       
