--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
 <p>一般回到家里后我会全身心地陪娃，和他一起念书——我感觉自己的词汇量和口语都有点幼儿级别的长进，或者很投入地玩积木、贴纸，但是偶尔，我只想做点自己想做的事——就像全天下绝大多数的爸爸们所做的那样，在家里休息时也把自己单独关在一个房间里，刷剧，或者玩游戏，或者看书。</p>
 <p>他们可能只是对其他人过于放心。他们知道自己就算什么也不做，也会收获一只讲文明懂礼貌爱学习有文化的崽。</p>
 <p>见鬼的「孩子0～6岁亲妈妈」。虽然我愿意。</p>
+<p>–</p>
+<p>混在甜筒园志愿者群里，却只去过一次就不想去了，一是周末太短暂，一点也不舍得浪费，二是不想当没什么技术含量的免费劳动力，登记的人挺多的，平时不上班的人也挺多，这么好的机会就留给他们吧…</p>
 
         
       
