--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
 <p>高中开始就只对家里报喜不报忧了，生病时除非吃药没用才叫家里人来带去医院看，工作之后更是所有事自己扛，除了L，没有人能分担。不过好像大部分人都是自己扛，再说三十岁了还要爸爸给单位请假不是巨婴是什么…</p>
 <p>小宇分不清你我，L下班回来时他会嚷嚷：「你爹回来了，你爹辛苦了」，我说「我爹早就死了」，然后感觉心里酸酸的。</p>
 <p>–</p>
+<p>一上班，看到一百多条未读消息，然后看到了 J 哥在群里的发言，甩锅痕迹明显，联想到他之前跟我说的「不了解历史背景不要跟我逼逼」，感觉他有点不成熟。</p>
+<p>热闹的一天，从邀请合作同事进行互评开始，更狠的还有「想给谁评论」，看上去像是「报仇雪恨」的机会来了，但事情并没有那么简单。往事如风随他去。</p>
 
         
       
