--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
 <p>走之前小宇兴致勃勃，去博物馆，去博物馆，去博物馆，到了之后他没多久就催着回家，全靠饼干吸引着往前走，博物馆和动物园的差别可见一斑。</p>
 <p>回家的路上他就睡着了，一直睡到晚上五点多，我终于有机会练琴，磕磕绊绊能把梁祝弹下来了，开心。</p>
 <p>最近吃盐酸米诺环素+维生素 b6 ，饮食上没怎么注意，还有幸吃了点辣椒，感觉很幸福。但是老妈说，不能总吃药，饮食能控制住痘痘，就靠饮食调节，偶尔吃点药，不能把药当饭吃，药副作用大，好了这里伤了那里。我感觉很有道理。等手头药吃完了，差不多体检报告也该出来了，到时候看看去医院修修补补什么。</p>
+<p>–</p>
+<p>tianyu 说，想请我吃一顿饭，因为之前帮她周末修 bug 上线的事，我说不用了，她说说好了，我就回她：要不送我一本书吧。</p>
+<p>酒肉穿肠过，书香永流传。</p>
+<p>我喜欢有人送我书。</p>
 
         
       
