--- a/index.html
+++ b/index.html
@@ -209,6 +209,11 @@
 <p>tianyu 说，想请我吃一顿饭，因为之前帮她周末修 bug 上线的事，我说不用了，她说说好了，我就回她：要不送我一本书吧。</p>
 <p>酒肉穿肠过，书香永流传。</p>
 <p>我喜欢有人送我书。</p>
+<p>–</p>
+<p>上周，还是上上周，忘了，最近时间过得太快了，总之是不久前，白教授问我，博客地址是啥，我赶紧私发了过去，诚惶诚恐地，感觉有人看是一种愉快的事，我就怕浪费了别人的时间。</p>
+<p>还记得大一刚开学几个月，才认识了一个同班同学，就把自己博客地址——当时还是 163 ——从 qq 上发了过去，他说：「看来你是很希望有人了解」。这句话我现在还记得，因为我确实很希望有人了解，我不知道别人是不是这样的。</p>
+<p>不过，即使如此，假如有人不了解我，那也没什么，宇宙辽阔，死生之外无大事。</p>
+<p>与很多人一见如故，也与一些人不知道该怎么聊，能聊什么，少了显得生疏，多了有交浅言深的嫌疑——多半是同事——但凡是工作以前就熟悉了的，哪怕没见过几面，也不会有这样的犹疑。</p>
 
         
       
