--- a/index.html
+++ b/index.html
@@ -197,9 +197,12 @@
         
           <p>刮了两天大风，今天终于稳定些了，十点多的阳光有点晒，但早晚又微冷。</p>
 <p>小宇最近喜欢模仿别人说话的语调语气，比如一种斩钉截铁的调调，似乎每句话后面都加了三个感叹号，他可能感觉很有意思。昨晚他想看书，我在看自己的书，他说「妈妈你过来！」「我不过去！」「我要你和我一起看书！」（「看书」这俩字要紧促而上扬），「我想看自己的书！」他着急了：「但是妈妈我爱你，你快过来吧！」我绷不住大笑起来。</p>
-<p>周五 L 在家，换了油烟机，晚上到家吃完饭，在原来变色的地方贴了米白色的纸，焕然一新，顶部长条的纸上，我踩着梯子画了 Maisy 和朋友们一起吃饭的情景，小宇很喜欢，L 说不然把厨房整个都贴一遍给我画…</p>
+<p>–</p>
+<p>上周五 L 在家，换了油烟机，晚上到家吃完饭，在原来变色的地方贴了米白色的纸，焕然一新，顶部长条的纸上，我踩着梯子画了 Maisy 和朋友们一起吃饭的情景，小宇很喜欢，L 说不然把厨房整个都贴一遍给我画…</p>
 <p>周六上午我们去买了油布，放在橱柜里容易脏的地方，午饭后去南边工地接了小宇的三爷爷来，帮忙修理卫生间的灯，一直修到晚上快十点。第二天等小宇醒来的时候，三爷爷已经被送回去了。本来打算买的书架，也只好推到周日了。</p>
-<p>周日一早，吃过饭就和 L、小宇、L 妈妈一起来到了建材市场，还剩下 30km 的里程，应该够来回，但是坐在上面总担心要被救援，于是 L 去给车充电了，我和 L 妈妈带着小宇，逛了几家店，在第三家订好了书架和厨房阳台上的窄柜。等 L 来的时候，一切都办好了，他说自己就是个司机，都没有拍板的机会。又说，我们两个女人在一起合计什么，他就会很忙。</p>
+<p>去接三爷爷之前，小宇坐在门口的小凳子上准备换鞋，我问他会不会自己穿，他说「我会自己穿家里的鞋，也会自己脱家里的鞋，也会脱外面的鞋，但是我不会穿外面的鞋。」之后又说「以后等我长大了，我也把你们带到龙德广场上课去」，我们都大笑起来，问他给我们报什么课，他说「给妈妈报艺术课，给爸爸报积木课」，真懂事啊…L 已经开始畅想老了去上积木课，老师说：来今天学习把缝缝盖上～盖不上的话可以查查是不是患老年痴呆了哈～</p>
+<p>–</p>
+<p>周日一早，吃过饭就和 L、小宇、L 妈妈一起来到了建材市场，还剩下 30km 的里程，应该够来回，但是坐在上面总担心要被救援，于是 L 去给车充电了，我和 L 妈妈带着小宇，逛了几家店，第一家预算 4500 ，第二家 2900 ，第三家 2400 ，我们九在第三家订好了书架和厨房阳台上的窄柜。等 L 来的时候，一切都办好了，他说自己就是个司机，都没有拍板的机会。又说，我们两个女人在一起合计什么，他就会很忙。</p>
 <p>不出去玩的话，L 大概只想周末对着电脑加班，或者躺平在床上看手机？家具什么的，能用就行，实在忍不了了再寻找改善的方案，我为了息事宁人，也养成了「随便、都行」的心态。</p>
 <p>但 L 妈妈是一个做事追求尽善尽美的人，最重要的是，她可以无视 L 的主意，而我可以打财务辅助，这样就可以绕过 L 决策了。</p>
 <p>没有她我可能还得好几年才能用上梦想中的大书架。</p>
