--- a/index.html
+++ b/index.html
@@ -214,12 +214,17 @@
 <p>–</p>
 <p>昨天早晨，「小朋友」群里集合，商量好了去小区花园里摘桃子，小铃铛、小凡、豆豆、森钥，每家都带着工具和袋子，小区里树上的桃子意外地很好吃。</p>
 <p>快到中午的时候，小铃铛的妈妈说，不如就在这里野餐吧，孩子们都很开心。正好是父亲节，为了回报之前吃的别人家的蛋糕，我也订了个「爸爸最帅」的蛋糕，还把家里的小桌子小凳子和野餐垫搬出来了，陆陆续续有人带来烤包子、意面，有人买了披萨、烤肠，有人包好了饺子，还有糖醋排骨、湖北的曲米茶，以及我们家的南瓜面。一锅一锅地端出来，在 19 号楼中间宽阔的门洞里热热闹闹吃了起来，大人小孩一起，很是欢乐。</p>
-<p>这恐怕是世上最丰盛的小区野餐了。饭后收拾收拾，几个家长围着石桌开始打牌，一些人在旁边看。小宝给孩子们买的玩具到了，和我一起取了回来，分发给每个孩子，他们也玩得很愉快。</p>
-<p>我做了一个简陋的三分钟视频发到群里。</p>
+<p>这是一次史上最丰盛的小区即兴野餐。饭后收拾收拾，几个家长围着石桌开始打牌，一些人在旁边看。小宝给孩子们买的玩具到了，和我一起取了回来，分发给每个孩子，他们也玩得很愉快，三三两两聚在一起，举着陀螺枪，凹造型。</p>
+<p>我一直在旁边断断续续录像，后来做了一个简陋的三分钟视频，发到群里，留作纪念。是要留作纪念，小凡就要回西安了。</p>
 <p>–</p>
 <p>今天早晨出门准备上班，看到电梯在 15 楼停下来了，就等了会，到了 3 楼，门一打开，果然有小宝，和她一起去地铁站。自从有了四大皆空的群，我们私聊变少了，但也没有影响什么。而现在，还有 1 个月，她就要回西安去了，我记得她是 15 年年底来北京，我们在一起不到七年，又快要分开了。</p>
 <p>还有两个多月，孩子们就要上幼儿园了。</p>
 <p>春天幼儿园虽然稍微远一点，但算是一级，环境好一些，忍一下。</p>
+<p>–</p>
+<p>6.21 星期二</p>
+<p>早上上班特意在地下车库等了等小宝，人总是这样，快要离别的时候才分外珍惜日常。</p>
+<p>她说其实对小凡挺残忍的，他什么也不懂，被动无奈地接受一切变化，到西安之后应该会休息半年再看看工作，小凡最初接触幼儿园，肯定会有很多麻烦事等着。</p>
+<p>每一个选择都有人有所牺牲。心甘情愿地牺牲，或许更幸福点，当下幸福就好。</p>
 
         
       
