--- a/index.html
+++ b/index.html
@@ -209,6 +209,10 @@
 <p>–</p>
 <p>昨天傍晚终于有机会和铃铛、森钥她们会面了。赛跑，跳台阶，捉迷藏，最后一个项目是穿裙子，小宇说要他的那件有小圆圈的裙子，我给拿了下来，换上，然后其他人就纷纷过来撩裙子。他害怕这样的群体行为，捂着裙子不断地强调：不可以撩裙子。但是没有什么用，于是他的声音越来越紧张，皱着眉头，跑得也越来越快，眼圈隐隐泛红，我张开怀抱让他过来，没有人再来撩裙子。小朋友们的行为可能并没有多大恶意，甚至只是感觉一个学一个很有意思，而且还是平时一起玩得很好的朋友们，他还是害怕了。我想校园暴力大概就是像这样，一开始会降落在那些与其他人外形不太相似的人身上。</p>
 <p>普通、相似，就容易安全。</p>
+<p>–</p>
+<p>狐萝卜回西安去了，电话打过来的时候是周六傍晚，我和可乐小宇在迪卡侬玩，她说还有一两个小时就出发去车站了，晚上八点的火车，我不知道该说什么。</p>
+<p>接下来我们的生活就很少有交集了，告别只是徒增伤感。好在她没有定居在湖北或别的什么城市，而是在西安。</p>
+<p>希望她在西安一切顺利。</p>
 
         
       
