--- a/index.html
+++ b/index.html
@@ -210,11 +210,17 @@
 <p>–</p>
 <p>9.13</p>
 <p>在检测出了胎心胎芽之后，我就把这件事告诉弟妹了，以及 L 妈妈，因为前两天已经知道了弟弟家五一之前也会有个老二，就不算很惊喜——婆婆已经开始想，到时候两个一起回老家管着。</p>
-<p>想太远了，还有八个月呢。</p>
+<p>想太远了，还有八个月呢。L 提醒自己妈妈，先把今年的难关熬过去再说。</p>
+<p>他妈妈不以为然：难什么，快太哩。</p>
+<p>「你问问行丽（弟妹的名字）难不难」</p>
+<p>没有女儿的人可能没法体会。</p>
+<p>–</p>
 <p>今天早晨七点多起床就去医院排队抽血，七把管子抽下来，我竟然感觉时间挺短的，记得上次很漫长啊，也许是技术提升了？</p>
 <p>911 过去之后，发现我的可预支年假多了不止 7 天，想来是社会工龄即将满 10 年的缘故。一股沧桑感油然而生。</p>
 <p>–</p>
 <p>最近吃饭太差了，太差了，太差了，一碗鸡汤就很好，鸡汤泡面就更好了。</p>
+<p>L 妈妈喜欢说自己那时候什么也不懂照样生了两个孩，没什么坏胃口，也不知道孕早期要注意什么，我补充说：能活到现在都是命大的。</p>
+<p>我能活到现在，是因为三十年前小县城里就能做剖宫产手术，小宇能出生，也是依赖于剖宫产手术，似乎这种手术已经司空见惯，人们都忽视了它的风险。</p>
 
         
       
