--- a/index.html
+++ b/index.html
@@ -217,9 +217,12 @@
 <p>早饭时，老妈不知道我们要去公司上班了，说中午做什么什么饭，看来不用背饭了，中午对付着吃一点。然后老妈和姑快速炒了个菜，没有饭就带半个玉米馒头，意外地好吃。</p>
 <p>就像今天下午正要开例会的时候，雷哥说让我去某会议室一下，我猜是人员优化，但是我这个刚进入孕中期的状态，也不像能被优化的，于是就带着疑惑去了。不是优化，是调整。有了之前被调到凤巢支援的经历，倒也没那么失落，反而感觉豁然开朗。</p>
 <p>面前的船肯定是要漏了，能平安下来，就是好事。另一个后端问了几次是好还是坏，老板们耐心解释是好事，说 xx 都不知道，让保密。我心里想的是：都是剧本。</p>
-<p>又一次成了船要沉时被抛下去的人，但我没有一点难过，意外不是也可能美味吗？离开也是机会。</p>
+<p>又一次成了船要沉时被抛下去的人，但我没有一点难过，意外不是也可能美味吗？离开也是机会。毕竟现在做的这个项目，uv pv 也太可怜了…</p>
 <p>老板说要保密，但我还是跟组长说了，没办法啊，组长问了…其他人问我都是「要保密」。其实保什么密，都是套路，跟你说是被精心挑选的，谁也不知道是不是老大提供的名单。就假装阳光很好，天气不错，适合散步。</p>
-<p>就是这边人都挺好，不晓得那边投缘不。</p>
+<p>就是这边人都挺好，不晓得那边投缘不，不过控制不了的事情也没必要去纠结。</p>
+<p>一起的那个后端说：你这是躺平了，我还有一大家子要养活呢。</p>
+<p>也是啊，L 的担子比我重多了。</p>
+<p>–</p>
 <p>最近几天 L 开车送小宇上学，森月一起。第一天下车时森月哭了，说不想上学，她妈妈解释道，娃大概以为坐车是出去玩。小宇下车后背上书包，突然拐了个弯，没有进学校，跟我说：我要去告诉森月一句话。我问什么话，他说我要告诉她，等她妈妈老了他们家就没有人挣钱买饭吃了。</p>
 <p>然后他真的这么说了。我感觉很好笑，小大人一样，还知道劝人。</p>
 
