--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
 <p>–</p>
 <p>得到消息说，我们那个改版 n 次的项目被砍了以后，有多个毕业名额。突然就感觉，能留下来难道是因为肚子里有了小生命？可是挑人的也不知道这件事，我只是跟组长口头说过这件事，也没请过什么产检假。</p>
 <p>carolin 说「你就是不怀，也不会让你走的，你的能力还是挺受认可的，比如xx他也是负责内创啊，也没让他走」。她说过很多次这样鼓励我的话。</p>
-<p>其实就算她不说，别人问我怎么架构调整了的时候，我的回复也是：「因为我太优秀了啊，天选之子。」然后对方就沉默着打出省略号了…大概是本来想打听消息顺带安慰下我…</p>
+<p>不管是真心话，还是鼓励，我都理解为鼓励。我总觉得日常合作方的鄙视链是这样的：后端 &gt;  js 开发 &gt;  css 开发，因此熟练 css 的总觉得自己不算个优秀前端，不懂后端的会暗搓搓觉得自己不是个好开发。每个人都试图卷得更多，卷到合作方的领土。事实上很少听到后端卷前端，或者 js 很厉害的人非要把 css 搞明白。往往一副惭愧又自得的神情：唉我在 css 上真是一团乱麻。最好每个组里都有个 css 比较熟悉的人，替其他人写他们「瞧不上眼又不会写的」css 代码。</p>
+<p>其实别人在问我怎么架构调整了的时候，我的回复也是：「因为我太优秀了啊，天选之子。」然后对方就沉默着打出省略号了…大概是本来想打听消息顺带安慰下我…</p>
 <p>sam 主动+赶上了名额，顺理成章领大礼包，8 年的时间，还是很可观的…</p>
 <p>–</p>
 
