--- a/index.html
+++ b/index.html
@@ -222,7 +222,9 @@
 <p>八达岭高铁站进出时的电梯实在是太高了，我这种走在城市马路上都会担心有广告牌砸过来的人，在漫长的电梯上下行过程中很是忐忑不安。</p>
 <p>显然这种心理素质坐不了太空电梯。</p>
 <p>–</p>
+<p>除夕晚上拿出了之前买的烟花，和森月一家约着去公园里放，小宇说自己的腿受伤了，膝盖不能打弯，不下推车，安静地做一名美宝宝。这一整天他都很矫情，大概是前一天晚上和森月他们去蓝色港湾时坡道上跑得太猛了，恰好最近也没上学，在家里窝着没怎么锻炼，膝盖就受不了了。于是喊着腿疼，要我们抱来抱去，还得保持着抱之前腿弯曲的角度，吃饭时看没人抱，他就下了沙发，跪着挪到了饭桌旁，就像天桥上乞讨的残疾人…</p>
 <p>大年初一，带老妈和姑奶奶去了前门逛，天微冷，但空气挺清新，天色也很好，中午的阳光暖暖的，不过很快，南北向的前门大街地面上，阴影就遮住了一小半，接着一大半。大栅栏里的游客摩肩接踵，我们没有过多停留就出来了，小宇挺喜欢逛小商品店，在中国书店的货架子上拿着一个一个的小东西看、问。</p>
+<p>一整天他走路都是一瘸一拐的，还走得挺快，他说自己的腿已经恢复一小半了，等明天就恢复一大半了。</p>
 <p>逛街途中看到一个可乐哥哥同款的半自动金箍棒，标价才 15 块，就买了下来，结果第二天就在家里被他哐哐打书架砸碎了。</p>
 <p>初一晚上订了电影票，为了票价便宜点，顺便带小宇一起去，买了六点的，几乎包场，因此小朋友好奇地问一些问题也不会打扰太多。当然，看的是小宇最感兴趣的太空片——科幻片——流浪地球2.</p>
 <p>最近他有了小爱，都不怎么看书了，也把悟空识字抛到脑后了，亏我们还花了两百多块买了两年的 vip … 但是只要我拿着书坐下来开始看，他就会去书架上挑自己的书来，打断我，让我给他念。只有一次，他自己从书架上最低的一层，搬了厚厚的「儿童太空百科全书」，两只手举过头顶，一溜小跑把书扛到窗台上，打开念念叨叨，不时让我解释这个是什么，那个是什么。</p>
@@ -232,6 +234,8 @@
 <p>唱一壶老酒的时候，第一次播放的是纯音乐，前奏结束了他听着不对劲，就喊起来：「小爱同学，播放没有歌词的一壶老酒。」神奇的是小爱听明白了，给他找了个有歌词的一壶老酒…</p>
 <p>果然学得挺多。</p>
 <p>但学得再多，和瑶瑶姐姐视频聊天时，一张口，还是屎尿屁。</p>
+<p>初二值得庆祝，因为他的腿完全好了，已经可以跑起来了，他在家里过道上飞快地跑来跑去给我们展示，还问我：妈妈是不是我的腿好了你特别开心？我说是，他又问：是不是因为你爱我所以你开心？我还说是。</p>
+<p>这些天他喜欢一本正经地问人：「妈妈/婆婆你知道我有多爱你吗？」我们必须捧场说不知道，他就会比手画脚地：「从这里到海王星，再到柯伊伯带，再到这里，再到猎户座再到这里，这么远」，我就表示很惊喜：这么远啊，原来你这么爱我。他点点头，很满意我的反应。</p>
 <p>–</p>
 <p>1.29 星期日</p>
 <p>八点了，就差小宇没起床，我站着写日志，我说：小爱同学，播放起床歌。小宇悠悠醒来，哑着嗓子说：小爱同学，关机。</p>
