--- a/index.html
+++ b/index.html
@@ -202,6 +202,38 @@
 <p>也可能我不该去横向对比，人的烦恼和欲望大都是在比较中产生的。无论是别人大方体贴的丈夫，还是别人和善会处事的老妈。我就应该像四年前那样，甚至比四年前更能忍受，因为还有一个小宇需要分走一部分的我。我的老妈也应该任劳任怨还接受 pua 。</p>
 <p>虽然她的确是除了抬杠抬得好，做啥啥不行…但我有亲情滤镜，我就觉得没有功劳也有苦劳，她的确是努力了学习了，可也就那个水平了。</p>
 <p>每个人都是，对自己的亲人带着滤镜，而对别人毫不客气。</p>
+<p>–</p>
+<p>2.3 星期五</p>
+<p>早上和 L 带小宇去医院，下午和姑奶奶带小宇去医院。变异性哮喘真是磨人，上周医生说雾化得一两个月，这周说是两三个月。</p>
+<p>医生说新冠以后增加了好多这样的孩子，也不知道我们小时候是怎么过来的，没有雾化，病就没法治了吗…</p>
+<p>–</p>
+<p>2.7 星期二</p>
+<p>L 上班提前了半个多小时，加上马上小宇要开学了，早饭都不能在家里吃了。我想着这月底居家办公要是结束了，也去公司吃早饭，这样早上还能和 L 一起送小宇上学。</p>
+<p>上学的话，就得在睡觉的时候雾化了…好惨。最近喷鼻子雾化都靠小爱，因为他迷上了「白雪公主幻想日记」，每天 80 集专辑循环…正播放的时候，我喊一声「小爱同学…」，小宇马上跑过来捂住我嘴，不让我继续喊话，然后乖乖配合。小爱是他的软肋，有软肋就容易操作。</p>
+<p>还有三个月就要迎接新生命的到来了，L 计划在此之前把窗、空调换一换，净水器装上，电视墙也刮掉，把客厅改造成希望的样子。</p>
+<p>小宇姑奶奶三月底四月初就回家去了，操持儿子结婚的事，考虑到她的精力，还有健康状况，我们需要换个人帮忙带小宇，找到了之前在老家的一个姨，跟老妈是老伙计，到时候来试试。</p>
+<p>森月家两边老人都有状况，工作日就剩下姥姥一个人带着俩孩子，也是很难。</p>
+<p>加油，挺过三年，等老二也送进幼儿园就好点了…</p>
+<p>–</p>
+<p>飞鸟家的孩子又不叫张若澄了，改为张书瑜，在我的忽悠下他们重启了 qq 空间，开始晒娃，顺便给娃也注册了一个 qq 号。</p>
+<p>小宇，小瑜，也是很有缘分。</p>
+<p>–</p>
+<p>看到一段话，好的伴侣不是那些会纵容你的懒惰的人，而是情绪平稳、持续学习、知识面广博，对父母有耐心的人。私心想了想，L 差不多符合…</p>
+<p>森月妈妈问到「你对象还陪你体检啊？」的时候，我感到有点诧异：「这难道不是标配吗？」她说不是。</p>
+<p>或许我应该再知足常乐一些。</p>
+<p>或许是这个世界把一些标配压榨成了奢侈品。</p>
+<p>–</p>
+<p>L 说我双标，自己看帅的人演的电视剧，导航的声音就能设置沈腾李雪琴，看不起李雪琴咋地。</p>
+<p>不我只是感觉喜剧演员的声音没有爹味，听着自然…开心点不好吗？</p>
+<p>–</p>
+<p>上周末给对门 94 年的小伙子和程老师 97 年的外甥女牵了线约了饭，然而之后他俩都明白对方婉拒了，只有我以为既然加了微信就等着好消息了，还在策划后续的接触机会…</p>
+<p>幸好迷途知返。妹子也跟我说了一些自己的心里话，感觉男生态度有些「散」，就是那种不排斥不拒绝不热情的感觉，让努力找话题活跃气氛的她有些生气，完了男的还说：「希望能找个心理年龄大点的，相处起来不那么累」，这种话也能当着妹子的面说吗？就好像自己已经历尽沧桑看破红尘了。</p>
+<p>每个单身男都是凭实力的。</p>
+<p>原来瑞云姨是她的亲小姨。于是我邀请她有空了来家里玩，跟我家的小宇玩，她说好，还说喜欢小男孩，如果以后自己生的话，也想生个男孩。</p>
+<p>这么朝气蓬勃的女孩啊，也不知道对门男生咋想的，可能被情伤过…为七八年前在一起的前女友付出的太多了，导致后面再没有心力经营新的关系了。</p>
+<p>也许从他一开始说「我工作很忙的，如果她需要时间陪伴，可能就不适合」的时候，我就应该能想到这类人只适合跟工作谈恋爱。</p>
+<p>大蚂蚁昨天找我聊天，问工作情况，同样遇到了业务裁员，同样在苟全。她说自己很焦虑，不知道什么时候就会失业，我也不知道自己什么时候会失业，但是我不怕离开北京，过不下去了，就卖了房子回老家随便干点啥，说不定天大地大孩子也会更快乐。</p>
+<p>在这件事上我是相信车到山前必有路的。其实好像搞反了，所谓人无远虑，必有近忧。非得远虑吗？活在当下不行吗？</p>
 
         
       
