--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
 <p>组里有个同学，不知道该不该走，在鹅厂两年了，户口最晚还要等明年后半年，可是晋升感觉没有希望，项目资源太差了，去百度搜索的话唯一牵挂的就是尚未到手的户口，哪怕再过两年要回成都，也还想留一条那边工作不顺利的后路在北京。既要又要之下，两难了。</p>
 <p>年轻人压力太大了。户口，对象，工资，职级，层层大山。</p>
 <p>好消息是，七夕那天宝生朋友圈里晒证了。很登对，可喜可贺。</p>
+<p>坏消息是，茶几还在客厅里原来的位置，我没有权限卖掉它。</p>
 
         
       
