--- a/index.html
+++ b/index.html
@@ -195,8 +195,9 @@
         
 
         
-          <p>看娃前一天我跟小姨申请，让燕妮姐和可乐来玩，我可以支付额外带来的人情花费，好不容易都在合阳，多见见面。小姨同意了。</p>
+          <p>看娃前一天我跟小姨申请，让燕妮姐和可乐来玩，我可以支付额外带来的人情花费，好不容易都在合阳，多见见面。小姨同意了，说不用我给钱。</p>
 <p>之前不允许的时候，我只是觉得她这种做法省了点钱但是挺尴尬的，因为平时也并非关系不好，这种事情上卡流程傻子也知道怎么回事，何况我婆婆这样精明的。现在同意了，我又想着，要是自己的亲兄弟姐妹，一定不会这么麻烦。</p>
+<p>晚上我跟燕妮姐商量的时候，她说大哥给小姨打电话去了，说是他的主意，让她们去马家庄。</p>
 <p>瑶瑶、小宇、可乐，难得见他们不吵不闹在一个院子里玩耍。顶上的遮阴网去掉了，院子亮堂了，通风也好了很多，这才像个院子。这是 19 号，看娃的日子。家里很多人，大大小小的孩子尤其多。</p>
 <p>爱好社交的人在这样的场合里如鱼得水，我从一众人群中穿过去都感到呼吸困难。</p>
 <p>家里有大事时婆婆这儿那儿也不疼了——后来和婵闲聊，她问我天下的奶奶难道都是这样吗？看来她遇到同款病娇婆婆了。问了下的确是，全身各部位都疼，让去医院又不去，就是疼。我说那我们不一样，我们是真去医院查了，还做手术了，直到第三次做了一个没有效果的手术，才稍微消停了。</p>
