--- a/index.html
+++ b/index.html
@@ -195,7 +195,14 @@
         
 
         
-          <p>要下雪了，快过年的时候下雪啊，就打乱了许多计划。</p>
+          <p>上周六早上，L 和老妈，姨去奥北买了菜回来，吃过午饭我们根据公众号上说的去了一个跳蚤市场，据说有二手书和玩具，还挺期待，没想到就一点点书摊，还卖得比较贵。逛了一会就回去了。晚上龙龙来家里了，吃饭时拍了张合影，多亏了我的自拍杆。</p>
+<p>老妈和姨在群里说着小橙子给龙龙抱的事，其实也就是抱了一小会。老妈说有血缘还是不一样，舅舅在北京一个月也没有换来小橙子的首肯。这种话在有舅舅的群里说出来挺愚蠢的。</p>
+<p>周日下午 L 洗车，其他人去公园散步，公园里开拓了新的板块，小宇在野山坡上玩着玩着想回家拿铲子，于是我们一起回去拿。</p>
+<p>感觉 L 的父母不在北京，他就不太乐意参与家庭活动。可能都是一样的，他和他的父母视频聊天时，我也常常不在场。说不上不喜欢，也说不上喜欢，客气而已。</p>
+<p>冬日的阳光真好啊，暖融融的，坐在树下，旁边还有老人拿着话筒在唱歌。</p>
+<p>这两年我明白了冬天树木为什么要掉叶子，因为它们想让人们沐浴到更多的阳光。</p>
+<p>–</p>
+<p>要下雪了，快过年的时候下雪啊，就打乱了许多计划。</p>
 <p>给姨买了这周五的车票，她担心下雪了我们回不去了，提前回去。</p>
 <p>我其实是矛盾的，老妈挺想一个人待几天，躲躲清净，我也不需要有什么和她一起过年的执念。没有了执念，就对见到亲朋好友有了了一些期待，虽然大概率只能见到一些亲戚。朋友嘛，L 这边的可能会见到，我就不一定了。</p>
 <p>可能取决于自己的决心吧。带着孩子坐公交也是可以出门的。</p>
