--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 <p>老妈和姨在群里说着小橙子给龙龙抱的事，其实也就是抱了一小会。老妈说有血缘还是不一样，舅舅在北京一个月也没有换来小橙子的首肯。这种话在有舅舅的群里说出来挺愚蠢的。</p>
 <p>周日下午 L 洗车，其他人去公园散步，公园里开拓了新的板块，小宇在野山坡上玩着玩着想回家拿铲子，于是我们一起回去拿。</p>
 <p>感觉 L 的父母不在北京，他就不太乐意参与家庭活动。可能都是一样的，他和他的父母视频聊天时，我也常常不在场。说不上不喜欢，也说不上喜欢，客气而已。</p>
+<p>我不喜欢他妈妈在电话里问：xx 的脸现在还是啥也不能吃吗？尽管她很可能只是没话找话。为了避免别人谈论到自己的情况，我中午吃饭都是抱着饭盒去四楼热好了吃掉。我不乐意感受熟悉的人，每天，凑到跟前来看我在吃什么，问我谁做的饭，感叹好清淡好健康。我多想吃点好吃的。L 还说什么要一视同仁，小橙子也吃到两岁再断奶，我怕我会疯。</p>
 <p>冬日的阳光真好啊，暖融融的，坐在树下，旁边还有老人拿着话筒在唱歌。</p>
 <p>这两年我明白了冬天树木为什么要掉叶子，因为它们想让人们沐浴到更多的阳光。</p>
 <p>–</p>
