--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
 <p>我会焦虑吗？目前还不会，除非不续签的通知下来了。无所谓，降薪也无所谓，只要多给我一点自由时间。</p>
 <p>反过来说，假如公司还需要我，那这儿就是我的理想公司，如果不需要这样的我，那我们互相没有看中，散伙也不可惜。</p>
 <p>我的春节休假理由选的是育儿假，而不是年假，可能是想挑战老板的神经，也可能老板根本不在意，老板需要狼性员工，可我只是个喜欢蛋黄派的没有风骨的狗。</p>
+<p>–</p>
+<p>15:03 </p>
+<p>快快地聊完了今年的奖金，差一次考核，「不过不影响什么」，所以需要影响什么的时候，只是剧本，不用当真。</p>
+<p>还是挺开心的，休假半年，还能得到比去年高一些的奖金，被打上「靠谱」的标签。</p>
+<p>至于「冲一冲，有希望 outstanding 」的话，我知道有希望，同时我也知道这个 outstanding 的背后需要什么样的辛苦。我想试试在不那么辛苦的情况下，问薪无愧地工作，不管结果。</p>
+<p>同时我决定如果 L 不问，我也不告诉他奖金的数字，因为他也没主动告诉过我。</p>
 
         
       
