--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 <p>我就很费解，我愿意给普通人、同样处于底层的人，当他们遇到困难时，捐点爱心，但是给蔡磊这样的大厂副总裁捐款，我感觉是丫鬟替娘娘操心。我甚至阴暗地揣度，生命到尽头了，不管是谁，都想把自己的思想流传下去吧，比如李开复，《向死而生》，比如蔡磊，《相信》，我宁愿去看史铁生的《病隙碎笔》。名人想传播自己的思想可太容易了，哪怕只是口述一下流水账，就会有人帮着润色编辑出书。他们写的书，是他们的，又不是他们的。如果说有什么帮助，大约可以给同样被命运扼住咽喉的人一些同病相怜的慰藉。</p>
 <p>我也觉得自己这么想有些冷漠，可是这个世界上每天都有那么多的苦难，说不定十几年后苦难也会降临到我自己的身上，我为什么要关注苦难而忘记快乐？</p>
 <p>在能快乐的时候快乐一些，才不至于面对苦难时后悔不迭。那时候我们需要哲学来救治。</p>
+<p>老妈是一个矛盾体，身边普通人的事情她常常说：「与我无关」，名人出什么新闻她津津乐道步步紧跟。</p>
 
         
       
