--- a/index.html
+++ b/index.html
@@ -199,8 +199,14 @@
 <p>小橙子已经睡熟，小宇吃过药也很快睡去，我前天晚上半小时半小时地给手环定闹铃，起来给小宇测体温降温，到昨晚也是很累了，一觉睡到五点半，一摸小宇额头滚烫，幸好擦拭片刻就退烧了，头孢万岁。</p>
 <p>由于调休，上周末 L 只有一天假，我周六给自己休了假，有机会接小宇放学。当天风很大，我让他面朝我坐着，背后垫着书包免得被儿童座椅把手硌到，他怀里保护着幼儿园里做的送给我的母亲节礼物——一张卡片，上面有一个穿着裙子的剪纸小人，还有一行字：母亲节快乐！</p>
 <p>我给他把衣服上的帽子拉上来，防止风直接吹到他，虽然已经立夏，下午的风还是不可小看，他感受到背后的风带来的阻力，很快乐地、大声地朝我喊：「妈妈，假如风有颜色，而且是白色的话，我们这会就像彗星一样！我们身后的风就好像彗星长长的尾巴似的，我们这是在太空里！」又说：「要是彩色的话，就更好看了！」</p>
-<p>晚上喝了酸奶，本来计划刷牙的，结果躺在床上一动也不想动，我催他刷牙，他说不想刷，但是我们之前约定过，喝了酸奶就必须刷牙，于是他索性发誓以后再也不喝酸奶了，永远不喝了。我拿出手机录视频，他很配合地重复了一遍誓言，但是想了想又说：「我还是刷牙吧，就算不喝酸奶也要刷牙，不然我的牙齿就坏了。」</p>
-<p>我觉得他是一个很自爱的小孩，知道自己不能吃甜的，影响眼睛，他能忍住在生日会上不吃蛋糕；知道外面刮大风，就不要求去爬山，说怕感冒发烧。周日在商场买了一台希沃学习机回来，第二天他能指导老妈找到插排——他当时把插排叫充电宝——自己插上线，拿着机器配套的棍子哗啦哗啦找到「悟空识字」——老妈说，一开始没找到，他很生气，又继续找，终于找到了。商场里销售人员的操作她都看明白了。</p>
+<p>回到家不久他拉我进房间，脱下裤子给我看屁股，我很懵，他这是要干什么？？他开心地问：妈妈你看我屁股干净不？我瞟了一眼敷衍他：「干净干净」，他说：「我今天在学校尝试自己擦屁股了！」我赶紧仔细端详了几秒，又奉上一顿彩虹屁：「太干净了！你简直太棒了，都会自己擦屁股了！而且擦得这么干净！」他很开心，并且要我昭告天下——给自己在小区的朋友们，还有班上的小朋友们，都发信息说这件事。我要笑死了，但还是遵命说了。</p>
+<p>当天晚上喝了酸奶，本来计划刷牙的，结果躺在床上一动也不想动，我催他刷牙，他说不想刷，但是我们之前约定过，喝了酸奶就必须刷牙，于是他索性发誓以后再也不喝酸奶了，永远不喝了。我拿出手机录视频，他很配合地重复了一遍誓言，但是想了想又说：「我还是刷牙吧，就算不喝酸奶也要刷牙，不然我的牙齿就坏了。」</p>
+<p>我觉得他是一个很自爱的小孩，知道自己不能吃甜的，影响眼睛，他能忍住在生日会上不吃蛋糕；知道外面刮大风，就不要求去爬山，说怕感冒发烧；医生说了小儿豉翘颗粒苦但是能治病，他就愿意忍一忍喝下去。</p>
+<p>不仅如此，对自己喜欢的事情他还挺乐意探索的，周日在商场买了一台希沃学习机回来，第二天他能指导老妈找到插排——他当时把插排叫充电宝——自己插上线，拿着机器配套的棍子哗啦哗啦找到「悟空识字」——老妈说，一开始没找到，他很生气，又继续找，终于找到了。商场里销售人员的操作她都看明白了。</p>
+<p>自制力和自卷力都是有的，像爸爸一样我就省心了。</p>
+<p>有时候也难免小孩子要风就是雨的脾气，比如周日非要吃水蜜桃，说要么水蜜桃，要么桃子味的山楂棒，二选一——学会让我做选择题了，我说超市都关门了，要不家里有啥吃啥？芒果？他不愿意，我就编故事：「芒果自从被我们买回来，放在冰箱里好几天了，都没被切开，我都听到它们在哭了，哭着哭着求我们对他动刀子」，他本来眼圈都红了，听到这个一下子笑了，再劝了劝，同意赐予芒果挨刀子的恩惠。</p>
+<p>我发现很多事情都可以这么解决，比如他发烧不愿意擦水，感觉不舒服的时候，我告诉他：假如现在打一个鸡蛋在你脸上，鸡蛋都能给烤熟了，再摸摸肚子，你这肚子都能把肉烤糊了！他一听噗嗤笑了，也就愿意了。</p>
+<p>谈判时心情很重要。</p>
 <p>–</p>
 <p>昨天晚上问我：妈妈，你说我要是拿很多奖状，然后贴墙上，是不是家里就都塞满了奖状，门都关不上？</p>
 <p>我说我小时候就是那样的，他追问：「为什么你小时候能拿那么多奖状呀？」</p>
