--- a/index.html
+++ b/index.html
@@ -214,6 +214,12 @@
 <p>6.19 星期三</p>
 <p>才说了小橙子坚强不倒，昨天晚上回来就感觉她脚心发热了，今天早晨给小宇测体温时顺便测了下，低烧，晚上回来姨正在给她擦身，37.9 ，刚刚睡着了，36.5。</p>
 <p>最近工作实在是太忙了，有个问题解决不了，拉着后端一起看，转移压力。</p>
+<p>家祥问我，小雨的个人签名怎么看着有股怨气——3.26触霉运开始，6.7终于结束，牛鬼蛇神请远离。</p>
+<p>我说怨气确实很大，而且给我们这些共事的人分男女打了标签——毒舌变态女，小心眼子下头男。</p>
+<p>他回我：高冷不说话女倒是能对应到你，我都知道你没这功夫毒舌。</p>
+<p>可不是，忙得跟陀螺一样。</p>
+<p>「有的人可能脑回路不太一样吧，分不清好赖；我都能想象入门能被你带有多省心」</p>
+<p>来自合作方的肯定，妥帖。</p>
 
         
       
