--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@
 <p>这周一面试的时候遇到一个可怜的孩子，他两次坚定地说css里的「position 是相对服务器的」，我都快笑场了，但一看到那个孩子——其实也不算孩子了，硕士研究生，毕业年龄应该在24～25岁了——一看到他迷茫的样子我又实在笑不出来，他就像十年前的我，怀揣着 jquery+html 一无所知地勇往直前。</p>
 <p>我所掌握的东西仅足够我混口饭吃，如果没有及时找到机会，有更专业强大的人带领，我跟他没什么差别。</p>
 <p>现在我站在又一个路口了，新的迷茫出现了，比如 AI ，MCP，我不知道未来会发生什么，只是庆幸自己还能接触到这些，而不是无知无觉地就被时代抛弃了。</p>
+<p>前些天看到一篇帖子，吐槽老一辈固执又可笑的思维逻辑，之后我看到有人回复：其实他们这么想，只是因为他们那个时代就是遵循这样的运行规则。恍然领悟，每个人都有自己的时代局限性，我们现在所熟悉的规则，数十年后又会有怎样的变化呢？</p>
+<p>–</p>
+<p>最近感觉书法我又悟了一点东西，可能真的是只有量变才能促成质变。</p>
+<p>临了两周梁启超的张迁碑，给老师看的时候他就说这个有唐风，回头问了老师这样的能不能临，他推荐了何绍基的版本。算了我还是临老师写的吧。</p>
+<p>能临啥像啥也说明有进步了…</p>
 
         
       
