--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 <p>昨晚和同事们在小骆驼烧烤聚餐的，由于第一天推荐的大盘鸡很好吃，他们又问我吃什么，我寻求外援，没有结果，要么不知道要么说没什么要么没回复，后来珂珂说这附近有一家小骆驼，北京也有，很不错，就去那儿吧。</p>
 <p>高中毕业那会我给一同学出过主意，跟他说做销售适合他，他竟然真的做销售去了……「销售无上限！」再见他提到这个，我完全不记得了——我十几年前就这么胆子大吗？去随便影响别人的人生轨迹吗？</p>
 <p>对昨天晚上还去🚗🚗家看了看，很开心，以后想起她的时候就有一个具体的画面了。车车家的小区大门很复古，Link 说每次回家都像是上朝。</p>
-<p>人生仿佛被按下了加速键，在和知己好友能见的时候要多见见。</p>
-<p>今天华山没有跟欢哥在一起，她说人生不要留遗憾，不知道丁着的她以后会不会遗憾。</p>
+<p>人生仿佛被按下了加速键，在和知己好友能见的时候要多见见。老同学就算来北京的时候工作日各忙各的，诺大的北京南北相隔那么远，也难以会面，到西安了被旅行社安排，也只能见缝插针地碰头。</p>
+<p>华山没有跟欢哥在一起，这几天夜里跟她一起走在西安大街上，把大街当ktv，我们反复夸对方的美丽、可爱、聪明、没有方向感。她曾说人生不要留遗憾，不知道丁着的她以后会不会遗憾。</p>
 <p>–</p>
 <p>9.1 </p>
 <p>团建终于结束了，今天恢复正常上班状态，早晨小橙子不让我出门，一会说要看书，一会说要弹琴，总之就是没需求找需求。</p>
@@ -216,10 +216,13 @@
 <p>一会冷一会热的长恨歌，场面非常宏大，每个章节开幕都让观众「哇」地赞叹。时隔八年再来，技术更好了。</p>
 <p>看完回到酒店快一点了，第二天还有特种兵式的行程安排：早餐-城墙-回民街（包含高家大院皮影戏）-大雁塔-大唐不夜城。事实上在大雁塔合影时就差不多到了尾声，因为吃完小骆驼烤串后大家都累了，没有动力再逛不夜城了。于是我去找🚗🚗，在大悦城顶楼看了看夜景，又打车回去她家里，看到了好久不见的小凡，他黑帅黑帅的。</p>
 <p>再往后一天要爬华山，我之前是有点抗拒的，后来和索道组一起上山，强度还可以，尤其是我和 deydu ，到西峰看到云之后就不怎么动了，隔一会再看看云，拍拍照，大概在西峰停留有一小时不到，就下山了。14个人分了四批，我和 deydu 是最早下山的，另有一批索道上了又去了南峰的人，此外还有七点就集合徒步上去的，他们下山的时候也分了两批，一批索道返回，一批徒步下山。勇气可嘉。回到西安七点半不到，刚好杨贝和王乐到小杨烧烤了。</p>
+<p>在小杨烧烤店里我吃到了长安油饼…想起了小时候外婆也经常炸的，不过加上「长安」前缀，就能登堂入室成为小吃中的一个代表。</p>
+<p>「长安」这个名字，真是惊艳。</p>
 <p>第四天自由活动，下午两点半的车。和姨去了布市，那是老妈老爸他们之前进货的地方。总共买了100米布，不知道姨要做多少被子床单…</p>
-<p>临别的时候姨和舅送我到港务大道地铁站，进了站还在回首，挥挥手再见。</p>
+<p>临别的时候姨和舅送我到港务大道地铁站，进了站回首看到姨还在远远望过来，用力挥挥手再见。</p>
 <p>车快到北京西站的时候，我看到了夕阳西下，倒影在一片河水里，远处层叠连绵的山，山前是一座古老的塔，山、水、塔、夕照、倒影，融成一幅静谧美丽的画卷。</p>
 <p>这种脱离了日常循环的生活，让人恋恋不舍。</p>
+<p>–</p>
 <p>有时候看群里的父母们给孩子报各种班，也会担心小宇的体育不达标，影响升学，但是又不想逼着他去做什么他现在不大会的事情，还是想循序渐进让他慢慢长大。</p>
 <p>上周有一天晚上给他在二层换床垫，听到他对老妈说：我要在爸爸妈妈死之前学会很多事情，不然等他们老了死了我还什么也不会。</p>
 <p>他很清楚自己的角色，一定会长成他自己期望的样子。做人可以自洽就不错了。</p>
