--- a/index.html
+++ b/index.html
@@ -202,10 +202,11 @@
 <p>快十二点半了，看到姨发的消息，说让我把饭端出来给她们吃。仿佛公司是我开的…，里面正在进行一场流水席。</p>
 <p>–</p>
 <p>上周六，上午哪儿也没去，就在家里等谷雨他们一家三口来，还有达达，说早早来，到的时候十一点半过了，没多久就去外面吃午饭，谷雨现在五年级了，忙得很，到处试课上课。等他们来的时候小宇见缝插针去秋露园广场跟敖丙玩了一会，直到广场人都散得差不多了。</p>
-<p>吃完饭我们带着自行车和平衡车来万象汇广场玩，他俩一起骑车玩，但很明显速度不是一个数量级。玩到三点回家去，收拾东西准备爬居庸关长城去，夜长城，也很美丽。有有、翊萌、豆豆，小宇小橙子，五个小朋友，一起在麦当劳门口吃汉堡，之后就自然地分成两组了，小橙子有有一组，其他三个大孩子一组，国庆和小胖带着他们三个爬到了更高处，我和L带着小橙子爬了两个烽火台。下来的时候由于台阶很高，L 倒着下，小橙子在后面慢慢下，一开始她还要背着，L 便背着她下，但看着实在太危险了，就让她下来慢慢走了。</p>
+<p>吃完饭我们带着自行车和平衡车，来万象汇广场玩，他俩一起骑车玩，但很明显速度不是一个数量级。玩到三点回家去，收拾东西准备爬居庸关长城去，夜长城，也很美丽。有有、翊萌、豆豆，小宇小橙子，五个小朋友，一起在麦当劳门口吃汉堡，之后就自然地分成两组了，小橙子有有一组，其他三个大孩子一组，国庆和小胖带着他们三个爬到了更高处，我和L带着小橙子爬了两个烽火台。下来的时候由于台阶很高，L 倒着下，小橙子在后面慢慢下，一开始她还要背着，L 便背着她下，但看着实在太危险了，就让她下来慢慢走了。</p>
 <p>烽火台上有个乐队在弹唱，秋日的夜晚，音乐声在居庸关夜景的衬托下更浪漫了。</p>
 <p>到家的时候十点多了，小宇还要看学习机，拗不过，就给看了一会。</p>
-<p>第二天上午照例带他俩去骑车，中午就在家里看看书，玩玩游戏，午饭后其他人都休息了，小宇还很有精神，我给他理了头发。理头发的时候他跟我聊，说到班里有人撕他的姓名牌上的膜，让人生气，又说到七个孩子的事，感觉七个孩子可能真的不行，照看不过来，辅导作业都很难，主要是没人愿意跟他生，如果是铃铛，生几个都行，但铃铛上次说她想换个人，小宇有点迷茫。</p>
+<p>第二天上午照例带他俩去骑车，我顺便带上了滑板，一到那儿就遇到教练过来推名片，我说我先自己练练，平衡感还没有很强。</p>
+<p>中午就在家里看书，荡秋千，午饭后其他人都休息了，小宇还很有精神，我给他理了头发。理头发的时候他跟我聊，说到班里有人撕他的姓名牌上的膜，让人生气，又说到七个孩子的事，感觉七个孩子可能真的不行，照看不过来，辅导作业都很难，主要是没人愿意跟他生，如果是铃铛，生几个都行，但铃铛上次说她想换个人，小宇有点迷茫。</p>
 <p>昨晚在中关村图书大厦看到一个礼物说这个铃铛一定喜欢，我问你剩多少钱了，他说35，一看礼物239，说那还是算了我得攒两个月。我们晚饭后去的中关村图书大厦，计划事买本数学练习册，卷一卷，后来L 相中了一本，在京东半价买了。</p>
 <p>小宇的零花钱，这个月还剩下16块了。每个月总共有100，可以累积起来，我们不赞成他买的东西，就从里面去扣除。他昨晚看中了一把枪，图书大厦69，拼多多19，下单完了他就剩16了……他说虽然花了点钱，但是算了三道题，我问哪三道，他说35减19等于16，35减16等于19，16加19等于35……看起来是真的喜欢数学。</p>
 <p>–</p>
