--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
 <p>10.3 去了合阳，跟程老师会面，晚上和姨在红丽舅妈家龙龙要结婚的酒店吃的饭。上午先在行丽家玩了一会，并没有留下吃午饭。中午跟程老师和瑞云姨在合阳吃的学面，之后就来到九龙游乐场了。我总共充了240块，最后剩下35，卡给燕妮姐留下了。</p>
 <p>老妈这个人，表哥他们占我便宜可以，我占他们的不行，总要想办法让我还的。老好人当惯了。</p>
 <p>少年时候被寄养，长大了得还多个人的恩情。小宇小橙子长大后不会被那些道德绑架。</p>
+<p>瑞云姨和程老师看到孩子们都很开心，对小橙子的评价是：看着很可爱的一个小女孩，一说话很有蛮力。确实她现在说话劲劲的，发音很用力。可能因为才学会。</p>
 <p>10.4 主要是参加婚礼，之后烧纸，小橙子在去的路上念叨着行程，念着念着就念成「烧婚」了。小宇跟我们一起坐在位置靠前的桌子上，新娘从门口走上T台的过程他都看完整了，演到新娘新郎互相表白时，小宇感叹：「幸好有国庆节，不然我都没见过结婚的完整过程」。其实其它时候他也见过别人结婚，不过排场没那么大，仪式感没那么强，都是在村里大棚里。</p>
 <p>因为一个菜盘子上的签子，可乐先拿的，可乐不在自己位置的时候小宇拿着玩了玩，他回来就抢，一下子没抢到就很生气，直接打了小宇两下脸，我气得站起来威胁他「你再这样我揍你了！」。我问小宇疼不疼，他说不疼了，还说「我忍着没有哭」。燕妮姐把可乐叫了过去，大庭广众打可乐脸，打了好几下，可乐被打哭了，我突然明白了他为什么打小宇的脸。以后就少一起玩吧。「一代亲二代表，三代四代完蛋鸟」是有道理的。我当时这么想的，并且在心里撤销了未来每年给可乐的生日礼物，他都10岁半了，比陌生人对待小宇还要差劲。</p>
 <p>两点多快三点的时候去烧纸，给外婆烧的时候天气还好，蒙蒙细雨，到给老爸烧的时候雨有点大了，钱点了很多次才着了，烧完鞠躬，小橙子记住了鞠躬，后来看书的时候，看「跆空道」那本书，有 bow，她说：「刚刚（当当）烧纸，也鞠躬了」。</p>
