--- a/index.html
+++ b/index.html
@@ -220,6 +220,29 @@
 <p>我说到时候王龙也不上班。</p>
 <p>大家一起喝西北风。</p>
 <p>「没有共同语言了」，我呸，打工还能打出优越感。渣男的借口而已。</p>
+<p>–</p>
+<p>11.11 司庆日</p>
+<p>和部门、团队、mickey、欢哥拍了些照片，很开心，我确实是strong了，十六七八斤的肉没有白长。</p>
+<p>小橙子最近有点便秘，感觉是茴香肉包子吃多了，消化不良，舌苔也发白，喝了点妈咪爱，引导她蹲马桶，用力嗯嗯，后来还是用了开塞露。她有些害怕拉臭了。</p>
+<p>今天晚上回去再引导下，规律排便。</p>
+<p>拉完主力军，她说还要拉小的，没拉完，其实已经拉一小盆的量了感觉…她趴在我肩膀上哭啊哭啊，哭完了又舔啊舔啊，舔我肩膀上露出来的皮肤…絮絮叨叨说了好多话，比如突然问：那婆婆怎么还没出去买西兰花呢？是带着哭腔的，我说妈妈买，她说那谁来管妹妹啊，妹妹想要妈妈坐在马桶前面。我说在手机上买，快递员就送到了，她说行。</p>
+<p>等我们出去了（我说出去看汪汪队吧——她发的音是哇哇队），小宇感觉妹妹拉不出来有些好笑，我对橙子说，哥哥小时候，三岁左右的时候，也有一次拉不出来，拉哭了，之后每天都重复一句话：「多喝水拉臭臭屁屁才不疼。」</p>
+<p>小宇哈哈大笑，感觉很有意思，还跟我确认是真的吗，小橙子转头对着哥哥：「哥哥小时候也拉不出来」</p>
+<p>她好可爱!!!</p>
+<p>–</p>
+<p>11.12 校园开放日</p>
+<p>今天小宇学校开放日，我们听了一节公开课，去操场上看了一年级孩子们跳绳，家长们又进行了拔河比赛，在庞星月爸爸的技术指导下经过三轮比赛进入决赛晋级为冠军队！</p>
+<p>这种大家拧成一股绳干一件体力活的经历，很久没有过了。</p>
+<p>并且我当选为班级家委会成员了，差一点就成为年级家委会成员了！</p>
+<p>当选年级和校级家委会成员的是两名老家长，都是二胎上一年级了，L 说等橙子上学的时候我也就有经验了，做一点自己没做过的事情也挺好的。</p>
+<p>妈妈们的工作有医生，有老师，敖丙奶奶说她从事了三十多年教育工作，也看不懂现在的教学方式了，在校门口直摇头…</p>
+<p>有一个二胎妈妈说，老大是在上地实验上的，今年名额被商品房顶了，政保的被挤到二小了，她感觉二小不错，压力没那么大，素质教育贯彻得很到位，毕竟是示范级别的素质教育学校…</p>
+<p>听着对家长很不友好，二小的小朋友在写字算题的时候，上地实验的孩子们在做卷子…</p>
+<p>但还是希望孩子有一个美好轻松点的童年，掌握课本上的东西，额外有自己喜欢的事情就可以了。初中高中六年，好好去奋斗。</p>
+<p>家长开放日只有半天，半天之后就放学，孩子们相约去百旺公园玩了，我和小宇去的时候打电话问了一下，橙子已经到了，玩了一会我说我要上班去了，橙子想先兜兜风，我就带她去兜了一圈，她不满意，我说再数20个数，就回公园里，她说行，慢慢数了20个数，倒回去放她下来，她很开心，跟别人说自己刚才去兜风了。</p>
+<p>走之前我也跟小宇说了一下，叮嘱他不要乱跑让人找不到。</p>
+<p>老妈对我的做法有点不赞同，她不在乎孩子的心理，只觉得哭是他们的天性，口头禅是：娃总是要哭的。</p>
+<p>娃也可以好好沟通的。但老妈不太擅长好好沟通，也不能察觉、照顾他人的情绪。</p>
 
         
       
