--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
 <p>他还希望我给他做一条小被子…或许可以有，找一些不用的公仔拆了…把内芯取出来…</p>
 <p>–</p>
 <p>老师让周一上学的时候带一张家庭合影，小宇要六个人的版本，四人的不行。我挺开心的。</p>
+<p>–</p>
+<p>🚗🚗 qq 空间发了一条帖子，熟悉的文风，喜欢。</p>
+<p>–</p>
+<p>小宇说，让我哪怕一周里有一天早早回来，也是很好的，不要总是等到快七点。好的这就动身。</p>
 
         
       
