--- a/index.html
+++ b/index.html
@@ -227,7 +227,10 @@
 <p>我最近有点悲观，因为总是感觉有下腹不太舒服，我觉得我到了防癌的年龄了，而且这个病对我来说，概率比较高。</p>
 <p>我又常常告诉自己不要这么想，最好不要让我身体的细胞听到「癌」这个字，给它起个它不知道是什么的名字：「一点也不可怕的肉球」。人体是很神奇的，恐惧不小心会变成暗示，暗示有时会起到一些作用。</p>
 <p>老爸老妈曾经也想过年老了不再早出晚归，而是漫山遍野放羊，只可惜老爸先走了，老妈也从来没想过会来到北京，过上早五晚八的生活。</p>
-<p>我没想到自己不仅给韬略介绍了女朋友，还介绍了一份需要付费上班的工作…人生果然充满了变数。</p>
+<p>她最近还挺开心的，因为认识了一个78岁，还在到处上课，年轻时去过很多国家地区，现在因为和女儿不和，一个人买了个100平三居住着的独立奶奶，独立奶奶经常带老妈去发现附近的超市。老妈第一次接触过这么独立精彩的同性，有些崇敬，发消息就开始逐字斟酌了，她跟独立奶奶说，自己和自己的女儿能说到一起。</p>
+<p>我很高兴她这么认为。</p>
+<p>–</p>
+<p>我没想到自己不仅给韬略介绍了女朋友，还介绍了一份需要付费上班的工作…人生到处都是惊喜啊…</p>
 
         
       
