--- a/index.html
+++ b/index.html
@@ -204,6 +204,42 @@
 <p>–</p>
 <p>晚上洗澡，小宇小橙子都想洗泡泡澡，橙子先洗，完了我用她的水泡了一下，就想感受下澡盆中水的浮力，也理解了她说有点害怕的原因，小小的她能克服很厉害。</p>
 <p>小宇洗澡的时候说：「我感觉新家实在是太豪华了」，问理由，他答「有楼梯，有二层」</p>
+<p>没见过世面还是好。</p>
+<p>–</p>
+<p>周日晚上L 说有空看看刘震云的访谈，我脑子里想着「刘振云」，感觉很熟，一时想不起来，老妈提醒我，那个写了一句顶一万句的。哦，我说怎么那么熟，看过好几本他的小说了，只是突然脑子浆糊了。</p>
+<p>然后提到一地鸡毛，我不是潘金莲，老妈说这个人很幽默，的确，写的文字也是直击人心。</p>
+<p>眼睛看不清这个世界，所以就向内求索。</p>
+<p>–</p>
+<p>1.20 星期二</p>
+<p>昨晚给小橙子过年买的新裙子回来了，她很喜欢，穿着转圈圈，今天也让她穿上了，反正孩子长得快，喜欢的衣服不多穿几天，就会变小。</p>
+<p>她连哭带诉说的时候谁也招架不住，比如一边哭一边拉着不让我上班：「我不要玩具，不要裙子，不要饼干，妈妈不要去上班。」很戳心。</p>
+<p>–</p>
+<p>1.21 星期三</p>
+<p>昨晚睡觉前，L 胳肢我，小橙子就冲上去打爸爸，小宇在上边躺着问：「妈妈你说，要是我现在在下面，会做哪两件事？」</p>
+<p>「肯定是抱抱妈妈，再打爸爸」，他说对。</p>
+<p>L 叹气：「我就是家里的次等公民。」转而问小宇：「假如大灰狼来我们家了，要吃一个人，先让它吃掉谁呢？」</p>
+<p>「爸爸！」小宇想也没想。</p>
+<p>「那如果大灰狼要吃两个人呢？」</p>
+<p>这回他思考了一下，然后答：「婆婆！」</p>
+<p>L 加了限制：「必须是我们四个中的人。」</p>
+<p>「那…小橙子」</p>
+<p>小橙子好惨。</p>
+<p>L 不说话了，我继续问：「那如果大灰狼要吃三个人呢？」</p>
+<p>我听到他说：「我」</p>
+<p>「为什么是你？」L 问他。</p>
+<p>「因为我爱妈妈。」</p>
+<p>我的心里像是有一条河淌过去了…泪水快出来了，这么小的孩子，他想保护妈妈。</p>
+<p>于是我一挥手：「你放心，如果真的有大灰狼来了，我和爸爸肯定会把你俩关在屋里保护好，要吃先吃我们。」</p>
+<p>谁知道小宇开始低低地哭了起来，不是害怕，他说是感动。</p>
+<p>我很诧异，小没良心的知道感动了。五六岁的时候一起看哪吒，哪吒妈妈变成珠子的时候他都没啥反应。</p>
+<p>我想上去抱抱他，L 说没事的，我心里想活该 L 先被推出去。</p>
+<p>于是跟小橙子说好了，我去楼上搂着小宇睡了一会，睡到一点多下来，L 也正好醒来…</p>
+<p>–</p>
+<p>小橙子昨晚有了大突破，会说蜂蜜的「蜜」的音，和「饼干」了，之前都是蜂腻、井单。小宇认真地贴脸教她一字一字说话，我看着她很不习惯地把嘴抿起来发完陌生的两个音，完了舔一舔嘴唇，人类幼崽真是可爱啊。</p>
+<p>小宇放寒假了，每天很是开心，看看学习机，逛逛公园，和同学约着玩一玩。</p>
+<p>晚上老妈跟我说，小宇也跟可乐那时候一样，一句话说不对就要打人。我说他也是柿子挑软的捏，你试试教育教育他，看他敢不敢。</p>
+<p>早晨上班前他还没起床，我问他是不是打婆婆了，他说是，问原因，是老妈说话不算数，反悔了。</p>
+<p>我很为难地拜托他：「再生气的时候能不能打被子，锤枕头？因为你打我妈妈的话，我会难过的。」他点点头，说尽量控制。</p>
 
         
       
